--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,12 +27,11 @@ target_link_libraries(myplugins nvinfer cudart)
 find_package(OpenCV)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(yolov4 ${PROJECT_SOURCE_DIR}/main.cpp ${PROJECT_SOURCE_DIR}/Tracker.cpp ${PROJECT_SOURCE_DIR}/utils.cpp ${PROJECT_SOURCE_DIR}/YoloModel.cpp)
+add_executable(yolov4 ${PROJECT_SOURCE_DIR}/main.cpp ${PROJECT_SOURCE_DIR}/Tracker.cpp ${PROJECT_SOURCE_DIR}/utils.cpp ${PROJECT_SOURCE_DIR}/YoloModel.cpp ${PROJECT_SOURCE_DIR}/utils.cpp)
 target_link_libraries(yolov4 nvinfer)
 target_link_libraries(yolov4 cudart)
 target_link_libraries(yolov4 myplugins)
 target_link_libraries(yolov4 ${OpenCV_LIBS})
-#target_link_libraries(yolov4 LibDataChannel::LibDataChannel Threads::Threads)
 
 add_definitions(-O2 -pthread)
 
